<resources>
    <string name="app_name">TestMatica</string>
    <string name="authorization_key">t2EyVwlZsLwP7TeAlyrJ</string>
    <string name="box1">Олимпиадное движение</string>
    <string name="box2">Преимущества нашего портала</string>
    <string name="box3">Самохвалов Вячеслав Дмитриевич</string>
    <string name="box4">Удивительно, здесь можете быть Вы</string>
    <string name="olymp">Слово «олимпиада» знакомо любому ученику, не зависимо от того, когда пришлось учиться в школе – 30 лет назад или сейчас. И даже значимость этого мероприятия не утратила своего значения. Такие конкурсы и состязания школьников — мерило их знаний и уровня подготовки для дальнейшего продолжения обучения в вузах.</string>
    <string name="plus">Контроль знаний учеников при помощи создания класса.
Тематические тесты по математике: доступном разделе присутствуют тесты по программе "Школа России".
Тематические тесты по другим предметам и подготовка к ОГЭ или ЕГЭ: данные разделы находятся в разработке.</string>
    <string name="svd">Основатель проекта, программист, дизайнер и редактор.
Студент Московского Политехнического Университета, факультет информационных технологий.\n<b>E-Mail:</b> slava.samokhvalov@mail.ru\n<b>ВКонтакте:</b> <a color="#fff" href="https://vk.com/slava.samokhvalov">vk.com/slava.samokhvalov</a></string>
    <string name="resume">Да, это место пока свободно. Нашему проекту требуется методист, редактор контента.\n<b>Требования</b>: отзывчивость, коммуникабельность, владение компьютером, умение искать необходимую информацию, знание таких языков программирования, как PHP и JavaScript на базовом уровне.</string>
    <string name="button1">Олимпиадное движение</string>
    <string name="button2">Различные инструкции</string>
    <string name="button3">Связаться</string>
    <string name="button4">Отправить резюме</string>
    <string name="good1">Добро пожаловать!</string>
    <string name="good2">Коллектив проекта</string>
    <string name="good3">Наши новости</string>
    <string name="good4">Вячеслав Самохвалов</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="comment_test"><b>Краткая инструкция:</b> ответы к заданиям теста необходимо давать полях ввода ответа. Если вы закончили решение теста и хотите увидеть результаты, необходимо нажать кнопку <i>Завершить тестирование</i>.</string>
    <string name="finishtest"><center>Тест был успешно завершен!</center></string>
    <!-- Strings of the block with thematic scenes -->
    <string name="math_test">Тренировочные тесты по математике (1 - 11 класс)</string>
    <string name="math_description">Именно ранние <b>математические способности</b> – верная предпосылка к тому, что в дальнейшем ребенок будет не только хорошо понимать математику, но и преуспевать в других школьных дисциплинах. Далее по значимости вклада в учебные успехи идут навыки чтения и способности управлять своим вниманием.</string>
    <string name="rus_test">Тренировочные тесты по русскому языку (1 - 11 класс)</string>
    <string name="rus_description"><b>Русский язык</b> — это мой родной язык, и не знать его для меня было просто стыдно. Признайтесь себе, что с грамотным человеком всегда приятнее общаться, с ним хочется встречаться вновь и вновь или даже подружиться. С начитанными людьми интересно общаться. Они могут рассказать много полезного и интересного, им хочется подражать. </string>
    <string name="inf_test">Тренировочные тесты по информатике (1 - 11 класс)</string>
    <string name="inf_description"><b>Информатика</b> — это наука о методах и процессах сбора, хранения, обработки, передачи, анализа и оценки информации с применением компьютерных технологий, обеспечивающих возможность её использования для принятия решений. Каждый день нам приходится сталкиваться с современными технологиями, ведь практически у каждого ученика в доме есть компьютер и Интернет.</string>
    <string name="bio_test">Тренировочные тесты по биологии (1 - 11 класс)</string>
    <string name="bio_description"><b>Биология</b> - это наука, изучающая основы жизнедеятельности и взаимодействия живых организмов. Вся биосфера, окружающая человека, относится к сфере интересов этой отрасли знаний. Поэтому биология важна, во-первых, как источник знаний об окружающем мире. С помощью этой науки человек сможет узнать больше о живой природе вокруг себя.</string>
    <string name="obs_test">Тренировочные тесты по обществознанию (1 - 11 класс)</string>
    <string name="obs_description"><b>Обществознание</b> представляет собой целый комплекс наук, направленных на изучения общества в целом, а также различных общественных процессов. Без данного предмета в современном мире не сможет обойтись ни один человек, ведь в него входит огромнейшее количество наук, позволяющих получать знания для изучения массы дисциплин.</string>
    <string name="okr_test">Тренировочные тесты по окружающему миру (1 - 4 класс)</string>
    <string name="okr_description">На сегодняшний день экономические понятия в начальной школе включены в образовательную область <b>«Окружающий мир»</b>, который является интегрированным курсом для четырехлетней общеобразовательной школы. В единый курс интегрирована такая образовательная область, как «естествознание».</string>
    <string name="junior_tests">Начальные классы</string>
    <string name="senior_tests">Старшие классы</string>
    <!-- end -->
    <!-- Strings of the block with exams scenes -->
    <string name="math_exam1">Подготовка к экзаменам по математике</string>
    <string name="rus_exam2">Готовьтесь ко <b>всем разделам экзамена</b>. Учите теорию, не надейтесь на природную грамотность и интуицию. Как только вы выучили тему, проработайте ее на задачах формата ОГЭ. Именно так вы научитесь применять теорию на практике и действительно поймёте законы, по которым работает русский язык.</string>
    <string name="rus_exam1">Подготовка к экзаменам по русскому языку</string>
    <string name="math_exam2">Часто подготовка в школе сводится именно к такому алгоритму, но он <b>малоэффективен</b>. Вы никогда не будете уверены, что сборник с парой десятков вариантов, минимум половина из которых одинаковые, охватил достаточное количество заданий.</string>
    <string name="inf_exam1">Подготовка к экзаменам по информатике</string>
    <string name="inf_exam2"><b>Информатика</b> — это наука о методах и процессах сбора, хранения, обработки, передачи, анализа и оценки информации с применением компьютерных технологий, обеспечивающих возможность её использования для принятия решений. Современный мир уже не способен обходится без информационных технологий, так как с каждым днем они все больше и больше внедряются в повседневную жизнь человека</string>
    <string name="start_exam">Перейти к тестам</string>
    <!-- end -->
    <string name="menu_home">Главная</string>
    <string name="menu_gallery">Тематические тесты</string>
    <string name="menu_slideshow">Подготовка к ОГЭ и ЕГЭ</string>
    <string name="olymp_comp">Олимпиады и конкурсы</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="active_test">
        <item>Тренировочные тесты по математике</item>
        <item>Тренировочные тесты по русскому языку</item>
        <item>Тренировочные тесты по информатике</item>
        <item>Тренировочные тесты по биологии</item>
        <item>Тренировочные тесты по обществознанию</item>
        <item>Тренировочные тесты по окружающему миру</item>
    </string-array>
    <string-array name="active_class">
        <item>1 класс</item>
        <item>2 класс</item>
        <item>3 класс</item>
        <item>4 класс</item>
        <item>5 класс</item>
        <item>6 класс</item>
        <item>7 класс</item>
        <item>8 класс</item>
        <item>9 класс</item>
        <item>10 класс</item>
        <item>11 класс</item>
        <item>Подготовка к ОГЭ</item>
        <item>Подготовка к ЕГЭ</item>
    </string-array>
</resources>