<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.TitleFragment" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">
        <ScrollView
            android:id="@+id/myview"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:padding="12dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/universal_button"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="italic"
                        android:gravity="center"
                        android:text="@string/good1" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/rectangle_rounded_all"
                    android:padding="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/box1"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:layout_marginBottom="10dp"
                        android:textSize="18sp" />

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="match_parent"
                        android:layout_height="190dp"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/olimpics" />

                    <TextView
                        android:id="@+id/textView2"
                        android:textColor="@color/black"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/olymp"/>

                    <Button
                        android:id="@+id/btn1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/universal_button"
                        android:text="@string/button1" />
                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/rectangle_rounded_all"
                    android:padding="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/box2"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:layout_marginBottom="10dp"
                        android:textSize="18sp" />

                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="match_parent"
                        android:layout_height="188dp"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/plus" />

                    <TextView
                        android:id="@+id/textView3"
                        android:textColor="@color/black"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/plus"/>

                    <Button
                        android:id="@+id/btn2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/universal_button"
                        android:text="@string/button2" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:padding="12dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/universal_button"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="italic"
                        android:gravity="center"
                        android:text="@string/good2" />
                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/rectangle_rounded_all"
                    android:padding="15dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="190dp"
                        app:srcCompat="@drawable/ruble" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginTop="10dp"
                        android:text="@string/box3"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="16sp" />

                    <TextView
                        android:textColor="@color/black"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/svd"/>

                    <Button
                        android:id="@+id/btn3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/universal_button"
                        android:text="@string/button3" />
                </LinearLayout>

                <LinearLayout
                    android:layout_marginBottom="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/rectangle_rounded_all"
                    android:padding="15dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="190dp"
                        app:srcCompat="@drawable/voprelse1" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginTop="10dp"
                        android:text="@string/box4"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="16sp" />

                    <TextView
                        android:textColor="@color/black"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/resume"/>

                    <Button
                        android:id="@+id/btn4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/universal_button"
                        android:text="@string/button4" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>