<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.ExamTestsFragment" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">
        <ScrollView
            android:id="@+id/myview"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/rectangle_rounded_all"
                    android:padding="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/math_exam1"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:layout_marginBottom="10dp"
                        android:textSize="18sp" />

                    <ImageView
                        android:id="@+id/math_image"
                        android:layout_width="match_parent"
                        android:layout_height="190dp"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/math_exam_image" />

                    <TextView
                        android:id="@+id/math_exam2"
                        android:textColor="@color/black"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/math_description"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/math_button1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/start_exam" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rectangle_rounded_all"
                    android:padding="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/rus_exam1"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:layout_marginBottom="10dp"
                        android:textSize="18sp" />

                    <ImageView
                        android:id="@+id/rus_image"
                        android:layout_width="match_parent"
                        android:layout_height="190dp"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/rus_exam_image" />

                    <TextView
                        android:id="@+id/rus_exam2"
                        android:textColor="@color/black"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rus_exam2"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/rus_button1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/start_exam" />
                    </LinearLayout>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/rectangle_rounded_all"
                    android:padding="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/inf_exam1"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:layout_marginBottom="10dp"
                        android:textSize="18sp" />

                    <ImageView
                        android:id="@+id/inf_image"
                        android:layout_width="match_parent"
                        android:layout_height="190dp"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/inf_exam_image" />

                    <TextView
                        android:id="@+id/inf_exam2"
                        android:textColor="@color/black"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/inf_exam2"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/inf_button1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/start_exam" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>